Added right and left columns to main content

--- a/Practice_2020/HW6/index.html
+++ b/Practice_2020/HW6/index.html
@@ -259,6 +259,68 @@
                 <a class="search__link" href="#">поиск...</a>
             </div>
         </div>
+        <div class="main__content">
+            <div class="catalog catalog_product">
+                <div class="catalog_name name__frame">Каталог продукции:</div>
+                <ul class="catalog_list">
+                        <li class="catalog_item"><span class="catalog_item_name name__frame">Шины</span>
+                        <ul class="catalog_sublist">
+                            <li class="catalog_sublist_item">
+                                <a href="#" class="catalog_sublist_link">Наименование 1</a>
+                            </li>
+                            <li class="catalog_sublist_item">
+                                <a href="#" class="catalog_sublist_link active">Наименование 2</a>
+                            </li>
+                            <li class="catalog_sublist_item">
+                                <a href="#" class="catalog_sublist_link">Наименование 3</a>
+                            </li>
+                            <li class="catalog_sublist_item">
+                                <a href="#" class="catalog_sublist_link">Наименование 4</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="catalog_item"><span class="catalog_item_name name__frame">Диски</span>
+                        <ul class="catalog_sublist">
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 1</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 2</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 3</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 4</a></li>
+                        </ul>
+                    </li>
+                    <li class="catalog_item"><span class="catalog_item_name name__frame">Болты</span>
+                        <ul class="catalog_sublist">
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 1</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 2</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 3</a></li>
+                            <li class="catalog_sublist_item"><a href="#" class="catalog_sublist_link">Наименование 4</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="tyres_list"></div>
+            <div class="catalog brands">
+                <div class="catalog_name name__frame">Бренды:</div>
+                <form method="get" name="brands_form">
+                    <ul class="catalog_list">
+                        <li class="catalog_item"><span class="catalog_item_name name__frame">Шины</span>
+                            <ul class="catalog_sublist">
+                                <li class=""><label><input name="" type="checkbox">Бренд 1</label></li>
+                                <li class=""><label><input name="" type="checkbox">Бренд 2</label></li>
+                                <li class=""><label><input name="" type="checkbox">Бренд 3</label></li>
+                            </ul>
+                        </li>
+                        <li class="catalog_item"><span class="catalog_item_name name__frame">Диски</span>
+                            <ul class="catalog_sublist">
+                                <li class=""><label><input name="" type="checkbox">Бренд 1</label></li>
+                                <li class=""><label><input name="" type="checkbox">Бренд 2</label></li>
+                                <li class=""><label><input name="" type="checkbox">Бренд 3</label></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <input name="" type="submit" value="Выбрать">
+                </form>
+            </div>
+        </div>
     </main>
     <!--FOOTER-->
     <!--<footer>
