Main content. Finished Center column

--- a/Practice_2020/HW6/index.html
+++ b/Practice_2020/HW6/index.html
@@ -45,6 +45,7 @@
             <span class="main_nav__shopping_cart">товаров:</span><span class="main_nav__shopping_cart__quantity">0</span>
             <span class="main_nav__amount">на сумму:</span><span class="main_nav__amount_sum">0,00 грн</span>
         </nav>
+    <!--SEARCH BOXES-->
         <div class="main__search">
             <!--SEARCH BY CAR-->
             <div class="search search_by_car">
@@ -260,6 +261,7 @@
             </div>
         </div>
         <div class="main__content">
+    <!--LEFT COLUMN-->
             <div class="catalog catalog_product">
                 <div class="catalog_name name__frame">Каталог продукции:</div>
                 <ul class="catalog_list">
@@ -297,7 +299,64 @@
                     </li>
                 </ul>
             </div>
-            <div class="tyres_list"></div>
+    <!--TYRES LIST-->
+            <div class="tyres_list">
+                <div class="tyres_item">
+                    <div class="tyres_brand">Goodyear</div>
+                    <div class="tyres_model">Ultra Grip Extreme</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list01.png" alt="tyre01"></div>
+                    <div class="tyres_price">90.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Nokian</div>
+                    <div class="tyres_model">Hakkapeliitta R</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list02.png" alt="tyre02"></div>
+                    <div class="tyres_price">115.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Hankook</div>
+                    <div class="tyres_model">K 708 155/65 R14</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list03.png" alt="tyre03"></div>
+                    <div class="tyres_price">393.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Goodyear</div>
+                    <div class="tyres_model">Ultra Grip Extreme</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list04.png" alt="tyre04"></div>
+                    <div class="tyres_price">90.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Nokian</div>
+                    <div class="tyres_model">Hakkapeliitta R</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list05.png" alt="tyre05"></div>
+                    <div class="tyres_price">115.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Hankook</div>
+                    <div class="tyres_model">K 708 155/65 R14</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list06.png" alt="tyre06"></div>
+                    <div class="tyres_price">393.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Goodyear</div>
+                    <div class="tyres_model">Hakkapeliitta R</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list07.png" alt="tyre07"></div>
+                    <div class="tyres_price">90.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Nokian</div>
+                    <div class="tyres_model">Ultra Grip Extreme</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list08.png" alt="tyre08"></div>
+                    <div class="tyres_price">115.00 грн.</div>
+                </div>
+                <div class="tyres_item">
+                    <div class="tyres_brand">Hankook</div>
+                    <div class="tyres_model">K 708 155/65 R14</div>
+                    <div class="tyres_image"><img src="img/main_tyres-list09.png" alt="tyre09"></div>
+                    <div class="tyres_price">393.00 грн.</div>
+                </div>
+            </div>
+    <!--RIGHT COLUMN-->
             <div class="catalog brands">
                 <div class="catalog_name name__frame">Бренды:</div>
                 <form method="get" name="brands_form">
