Main content. Finished right column

--- a/Practice_2020/HW6/index.html
+++ b/Practice_2020/HW6/index.html
@@ -363,20 +363,38 @@
                     <ul class="catalog_list">
                         <li class="catalog_item"><span class="catalog_item_name name__frame">Шины</span>
                             <ul class="catalog_sublist">
-                                <li class=""><label><input name="" type="checkbox">Бренд 1</label></li>
-                                <li class=""><label><input name="" type="checkbox">Бренд 2</label></li>
-                                <li class=""><label><input name="" type="checkbox">Бренд 3</label></li>
+                                <li class="catalog_sublist_item">
+                                    <input name="tyres_brand1" type="checkbox" id="tyres_brand1" class="checkbox-css">
+                                    <label for="tyres_brand1">Бренд 1</label>
+                                </li>
+                                <li class="catalog_sublist_item">
+                                    <input name="tyres_brand2" type="checkbox" id="tyres_brand2" class="checkbox-css">
+                                    <label for="tyres_brand2">Бренд 2</label>
+                                </li>
+                                <li class="catalog_sublist_item ">
+                                    <input name="tyres_brand3" type="checkbox" id="tyres_brand3" class="checkbox-css">
+                                    <label for="tyres_brand3">Бренд 3</label>
+                                </li>
                             </ul>
                         </li>
                         <li class="catalog_item"><span class="catalog_item_name name__frame">Диски</span>
                             <ul class="catalog_sublist">
-                                <li class=""><label><input name="" type="checkbox">Бренд 1</label></li>
-                                <li class=""><label><input name="" type="checkbox">Бренд 2</label></li>
-                                <li class=""><label><input name="" type="checkbox">Бренд 3</label></li>
+                                <li class="catalog_sublist_item">
+                                    <input name="brand1" type="checkbox" id="discs_brand1" class="checkbox-css">
+                                    <label for="discs_brand1">Бренд 1</label>
+                                </li>
+                                <li class="catalog_sublist_item">
+                                    <input name="brand2" type="checkbox" id="discs_brand2" class="checkbox-css">
+                                    <label for="discs_brand2">Бренд 2</label>
+                                </li>
+                                <li class="catalog_sublist_item ">
+                                    <input name="brand3" type="checkbox" id="discs_brand3" class="checkbox-css">
+                                    <label for="discs_brand3">Бренд 3</label>
+                                </li>
                             </ul>
                         </li>
                     </ul>
-                    <input name="" type="submit" value="Выбрать">
+                    <input name="pick" type="submit" value="Выбрать">
                 </form>
             </div>
         </div>
