--- a/Practice_2020/HW6/index.html
+++ b/Practice_2020/HW6/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main-nav.css">
     <link rel="stylesheet" href="css/main-search.css">
+    <link rel="stylesheet" href="css/main-content.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
@@ -399,7 +400,35 @@
             </div>
         </div>
     </main>
-    <!--FOOTER-->
+
+<!--ASIDE-->
+    <aside class="banners">
+        <a href="https://www.toyotires.com/" target="_blank">
+            <img src="img/aside_toyo-tires_banner.png" alt="www.toyotires.com">
+        </a>
+        <a href="https://www.bridgestone.com/" target="_blank">
+            <img src="img/aside_bridgestone_banner.png" alt="https://www.bridgestone.com/">
+        </a>
+        <a href="https://www.continental-tires.com/car" target="_blank">
+            <img src="img/aside_continental_banner.png" alt="https://www.continental-tires.com/car">
+        </a>
+        <a href="https://us.coopertire.com/" target="_blank">
+            <img src="img/aside_cooper_banner.png" alt="https://us.coopertire.com">
+        </a>
+        <a href="https://www.avontyres.com/en-us/" target="_blank">
+            <img src="img/aside_avon_banner.png" alt="https://www.avontyres.com/en-us/">
+        </a>
+        <a class="banner_up" href="https://www.tirefactory.com/home.aspx" target="_blank">
+            <img src="img/aside_tire-factory_banner.png" alt="https://www.tirefactory.com/home.aspx">
+        </a>
+        <a href="https://www.pirelli.com/global/en-ww/homepage" target="_blank">
+            <img src="img/aside_pirelli_banner.png" alt="https://www.pirelli.com/global/en-ww/homepage">
+        </a>
+        <a href="https://www.dunloptires.com/" target="_blank">
+            <img src="img/aside_dunlop_banner.png" alt="https://www.dunloptires.com/">
+        </a>
+    </aside>
+<!--FOOTER-->
     <!--<footer>
         <nav class="footer_menu">
             <ul class="footer_menu_list">
