--- a/Practice_2020/HW6/index.html
+++ b/Practice_2020/HW6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Home Work 3_2020</title>
+    <title>Home Work 6_2021</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -395,12 +395,11 @@
                             </ul>
                         </li>
                     </ul>
-                    <input name="pick" type="submit" value="Выбрать">
+                    <input name="pick" type="submit" value="Выбрать" class="text_color_white">
                 </form>
             </div>
         </div>
     </main>
-
 <!--ASIDE-->
     <aside class="banners">
         <a href="https://www.toyotires.com/" target="_blank">
@@ -429,18 +428,16 @@
         </a>
     </aside>
 <!--FOOTER-->
-    <!--<footer>
+    <footer>
         <nav class="footer_menu">
             <ul class="footer_menu_list">
                 <li class="footer_menu_item"><a href="#" class="footer_menu_link">О компании</a></li>
                 <li class="footer_menu_item"><a href="#" class="footer_menu_link">Доставка</a></li>
                 <li class="footer_menu_item"><a href="#" class="footer_menu_link">Статьи</a></li>
                 <li class="footer_menu_item"><a href="#" class="footer_menu_link">Контакты</a></li>
-
             </ul>
         </nav>
-        <span class="">Создание сайта  © Global Vision</span>
-    </footer>-->
-
+        <span class="copyright">Создание сайта  © Global Vision</span>
+    </footer>
 </body>
 </html>
