--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -18,7 +18,7 @@
         <nav class="main-menu page-header__main-munu">
             <ul class="main-menu__list">
                 <li class="main-menu__item main-menu__item_current">
-                    <a href="#" class="main-menu__link ">home</a>
+                    <a href="#" class="main-menu__link main-menu__link_current">home</a>
                 </li>
                 <li class="main-menu__item">
                     <a href="#" class="main-menu__link">about</a>
