--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>IcoMoon - SVG Icons</title>
+    <title>Home Work 7-8 2021</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
@@ -10,33 +10,61 @@
     <link rel="stylesheet" href="page-header/page-header.css">
     <link rel="stylesheet" href="logo/logo.css">
     <link rel="stylesheet" href="main-menu/main-menu.css">
+    <link rel="stylesheet" href="carousel/carouel.css">
 
 </head>
 <body class="page">
     <header class="page-header">
         <img src="logo/logo.png" class="logo page-header__logo" alt="pingbuller.com">
-        <nav class="main-menu page-header__main-munu">
-            <ul class="main-menu__list">
+        <nav class="page-header__main-menu">
+            <ul class="main-menu">
                 <li class="main-menu__item main-menu__item_current">
                     <a href="#" class="main-menu__link main-menu__link_current">home</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item main-menu__item_hidden">
                     <a href="#" class="main-menu__link">about</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item main-menu__item_hidden">
                     <a href="#" class="main-menu__link">blog</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item main-menu__item_hidden">
                     <a href="#" class="main-menu__link">products</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item main-menu__item_hidden">
                     <a href="#" class="main-menu__link">lorem ipsum</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item main-menu__item_hidden">
                     <a href="#" class="main-menu__link">dolor si amet</a>
                 </li>
             </ul>
         </nav>
+        <div class="carousel page-header__carousel">
+            <div class="carousel__wrapper">
+                <a class="carousel__link-back" href="#"></a>
+                <div class="carousel__item">
+                    <div class="carousel__item-title">lorem ipsum dolor</div>
+                    <div class="carousel__item-subtitle">it will make all your dreams come</div>
+                    <div class="carousel__item-description"></div>
+                </div>
+                <div class="carousel__img"></div>
+                <a class="carousel__link-forward" href="#"></a>
+            </div>
+            <div class="carousel__pagination">
+                <div class="carousel__page">
+                    <span></span>
+                </div>
+                <div class="carousel__page active">
+                    <span></span>
+                </div>
+                <div class="carousel__page">
+                    <span></span>
+                </div>
+                <div class="carousel__page">
+                    <span></span>
+                </div>
+
+            </div>
+        </div>
     </header>
 
 
