--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="page/page.css">
     <link rel="stylesheet" href="page-header/page-header.css">
     <link rel="stylesheet" href="logo/logo.css">
     <link rel="stylesheet" href="main-menu/main-menu.css">
     <link rel="stylesheet" href="carousel/carous.css">
+    <link rel="stylesheet" href="section-info/section-info.css">
+    <link rel="stylesheet" href="article/article.css">
+    <link rel="stylesheet" href="text_preview/text_preview.css">
 
  </head>
  <body class="page">
@@ -66,24 +70,26 @@
     </header>
 <!--SECTION-->
     <section class="section-info">
-        <article class="article" >
+        <article class="article section-info__item">
+            <div class="article__icon article__icon_wrench"></div>
             <h2 class="article__name">about our company</h2>
-            <p class="article__summary">Nunc turpis neque, feugiat eget eleifend et,
-                lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
-                lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
-                Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+            <p class="article__summary text_preview">Nunc turpis neque, feugiat eget eleifend et,
+                    lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
+                    lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
             </p>
             <a class="article__link" href="#">read more</a>
         </article>
-        <article class="" >
+        <article class="article section-info__item">
+            <div class="article__icon article__icon_bubble"></div>
             <h2 class="article__name">about our company</h2>
-            <p class="article__summary">Nunc turpis neque, feugiat eget eleifend et,
+            <p class="article__summary text_preview">Nunc turpis neque, feugiat eget eleifend et,
                 lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
                 lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
                 Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
@@ -96,9 +102,10 @@
             </p>
             <a class="article__link" href="">read more</a>
         </article>
-        <article class="" >
+        <article class="article section-info__item">
+            <div class="article__icon article__icon_music-notes"></div>
             <h2 class="article__name">about our company</h2>
-            <p class="article__summary">Nunc turpis neque, feugiat eget eleifend et,
+            <p class="article__summary text_preview">Nunc turpis neque, feugiat eget eleifend et,
                 lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
                 lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
                 Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
@@ -111,12 +118,6 @@
             </p>
             <a class="article__link" href="">read more</a>
         </article>
-
     </section>
-
-
-
-
-
 </body>
 </html>
